# L1

./: CMakeLists.txt  IFF-2-8_PranauskasG_L1_dat_1.json  IFF-2-8_PranauskasG_L1_dat_2.json  IFF-2-8_PranauskasG_L1_dat_3.json  example.json  readme.md
include/: DataMonitor.h  Logger.h  SortedResultMonitor.h  Student.h  Word.h
src/: DataMonitor.cpp  Logger.cpp  SortedResultMonitor.cpp  main.cpp
